apps/oxlint/src/snapshots/fixtures__output_formatter_diagnostic_--format=stylish ok.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --format=stylish ok.js
working directory: fixtures/output_formatter_diagnostic
----------
----------
CLI result: LintSucceeded
----------
