apps/oxlint/src/snapshots/fixtures__overrides_correctness_off_-c .oxlintrc.json@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: -c .oxlintrc.json
working directory: fixtures/overrides_correctness_off
----------

  x typescript-eslint(no-inferrable-types): Type can be trivially inferred from the initializer
   ,-[root.tsx:3:8]
 2 | // no-inferrable-types should trigger (explicitly enabled), but no-unused-vars should NOT (correctness is off).
 3 | const a: number = 5;
   :        ^^^^^^^^
   `----
  help: Remove the type annotation

  x eslint-plugin-react(no-multi-comp): Declare only one React component per file. Found: ComponentTwo
   ,-[subdir/foo.tsx:3:7]
 2 | const ComponentOne = () => <div>A</div>;
 3 | const ComponentTwo = () => <div>B</div>;
   :       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 4 | 
   `----
  help: Move this component to a separate file.

  ! eslint(no-unused-vars): Variable 'a' is declared but never used. Unused variables should start with a '_'.
   ,-[subdir/foo.tsx:7:7]
 6 | // But it should NOT trigger no-unused-vars since correctness is off.
 7 | const a: number = 5;
   :       |
   :       `-- 'a' is declared here
 8 | 
   `----
  help: Consider removing this declaration.

  x typescript-eslint(no-inferrable-types): Type can be trivially inferred from the initializer
   ,-[subdir/foo.tsx:7:8]
 6 | // But it should NOT trigger no-unused-vars since correctness is off.
 7 | const a: number = 5;
   :        ^^^^^^^^
 8 | 
   `----
  help: Remove the type annotation

Found 1 warning and 3 errors.
Finished in <variable>ms on 2 files with 2 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
